Add new feature for exit app, Add and Update 'buttonSocialMedia' 'buttonGoToMenu' 'buttonResetAll' 'logo_companyImageView' buttons. Add 'spinner__border' xml for update 'spinnerPlayerCount' and 'spinnerPlayerScore' Spinner by 'MenuActivity' class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="comenzar">Comenzar</string>
     <string name="image">image</string>
     <string name="ingrese_el_nombre">Ingrese el nombre</string>
+    <string name="social_media_button">LinkedIn</string>
+    <string name="go_to_menu">menú</string>
 
     <string-array name="player_counts">
         <item>1</item>
